
cargo-features = ["edition2024","test-dummy-unstable"]
[package]
name = "rust_discord_bot"
version = "0.1.0"
edition = "2024"

[dependencies]

nalgebra = "0.33.1"
bevy_reflect = "0.15.0-rc.2"
tokio = { version = "1.0.0", features = ["rt", "rt-multi-thread", "macros", "time"] }
serenity = "0.12.2"
time = "0.3.36"
poise = "0.6.1"

syn = "1.0"
quote = "1.0"