
cargo-features = ["test-dummy-unstable"]
[package]
name = "rust_discord_bot"
version = "0.1.0"
edition = "2024"

[dependencies]

nalgebra = "0.33.2"
tokio = { version = "1.41.1", features = ["rt", "rt-multi-thread", "macros", "time"] }
serenity = "0.12.4"
time = "0.3.36"
poise = "0.6.1"
rand = { version = "0.9.0-beta.1", features = [] }
sea-orm = "1.1.2"
image = { version = "0.25.5"}
imageproc = "0.25.0"
ab_glyph = "0.2.29"
